Upgrade to Java 25, Spring Boot 3.4.4, Kafka KRaft mode, and kafka-ui
- Bump Java version from 17 to 25 across root pom, producer, and consumer modules
- Upgrade Spring Boot parent from 3.3.4 to 3.4.4
- Upgrade Maven wrapper to 3.9.9 in producer and consumer modules
- Upgrade Dockerfiles to eclipse-temurin:25-jre-alpine; fix ADD path to target/
- Migrate docker-compose to Kafka 7.6.1 in KRaft mode (remove Zookeeper dependency)
- Replace kafka-rest-proxy + kafka-topics-ui with provectuslabs/kafka-ui on port 8085
- Add Lombok annotation processor config to root pom build plugins
- Refactor CryptoType switch statement to modern switch expression
- Use URI.create().toURL() instead of deprecated new URL(string)